# jennLang

./: .gitignore  .gitmodules  CLAUDE.md  README.md  benchmark.py  compile.sh  main.py  run.sh  test_config.json
.claude/rules/: debugging.md  language.md
.claude/skills/debug-protocol/: SKILL.md
.claude/skills/implement-protocol/: SKILL.md
docs/: simulator_options.md  simulator_semantics.md  tracing.md
lib/: ast.ml  dune  history.ml  lexer.mll  loader.ml  parser.mly  simulator.ml
porcupine-check/: main.go
scheduler_configs/: example_plan.json  scheduler_config.json  test_config.json  vr_comprehensive.json  vr_diskless_failure.json  vr_no_faults.json  vr_short.json  vr_targeted.json  vr_targeted_fixed.json
scripts/: porcupine.sh  trace.sh
traceanalyzer/: go.mod  main.go
traceanalyzer/metrics/: dispatch.go  duration.go  fault.go  fingerprint.go  interleaving.go
traceanalyzer/reader/: reader.go  types.go
traceanalyzer/report/: report.go
