(menhir
 (modules parser))

(ocamllex lexer)

(library
 (name mylib)
 (libraries
  core
  batteries
  yojson
  ppx_deriving
  ppx_deriving.show
  ppx_deriving.ord
  ppx_deriving.eq)
 (modules ast parser lexer simulator loader)
 (preprocess
  (pps ppx_deriving.ord ppx_deriving.eq ppx_deriving.show)))

; (executable
;  (name main)
;  (libraries core)
;  (modules main ast parser lexer))
