(menhir
 (modules parser))

(ocamllex lexer)

(library
 (name mylib)
 (libraries
  core
  csv
  batteries
  yojson
  ppx_deriving
  ppx_deriving.show
  ppx_deriving.ord
  ppx_deriving.eq
  sqlite3
  logs
  fmt)
 (modules ast parser lexer simulator loader history)
 (preprocess
  (pps ppx_deriving.ord ppx_deriving.eq ppx_deriving.show)))

; (executable
;  (name main)
;  (libraries core)
;  (modules main ast parser lexer))
